--- a/index.html
+++ b/index.html
@@ -10,83 +10,67 @@
 
 </head>
 <body>
-  <article class="card">
-    <section class="recipe-title">
-        <img src="assets/images/image-omelette.jpeg" alt="">
-        <h1>Simple Omelette Recipe</h1>
-        <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
-    </section>
-    <section class="prep-time">
-      <h4>Preparation time</h4>
-      <ul>
-        <li>Total: Approximately 10 minutes</li>
-        <li>Preparation: 5 minutes</li>
-        <li>Cooking: 5 minutes</li>
-      </ul>
-    </section>
-    <section class="ingredients">
-      <h2>Ingredients</h2>
-      <ul>
-        <li>2-3 large eggs</li>
-        <li>Salt, to taste</li>
-        <li>Pepper, to taste</li>
-        <li>1 tablespoon of butter or oil</li>
-        <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-      </ul>
-    </section>
-    <hr>
-    <section class="instructions">
-      <h2>Instructions</h2>
-      <ol>
-        <li><em>Beat the eggs:</em> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-  You can add a tablespoon of water or milk for a fluffier texture.</li>
-        <li><em>Heat the pan:</em> Place a non-stick frying pan over medium heat and add butter or oil.</li>
-        <li><em>Cook the omelette:</em> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
-        <li><em>Add fillings (optional):</em> When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
-        <li><em>Fold and serve:</em> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
-        <li><em>Enjoy:</em> Serve hot, with additional salt and pepper if needed.</li>
-      </ol>
-    </section>
-    <hr>
-    <section class="nutrition">
-      <h2>Nutrition</h2>
-      <p>The table below shows nutritional values per serving without the additional fillings.</p>
-      <table>
-        <tr>
-          <td>Calories</td>
-          <td>277kcal</td>
-        </tr>
-        <tr>
-          <td>Carbs</td>
-          <td>0g</td>
-        </tr>
-        <tr>
-          <td>Protein</td>
-          <td>20g</td>
-        </tr>
-        <tr>
-          <td>Fat</td>
-          <td>22g</td>
-        </tr>
-      </table>
-    </section>
-  </article>
-
-  
-
-  
-
-  
-  
-
-  
-  
-
-  
-  
-
-  
-  
-  
-</body>
+  <main>
+    <article class="card">
+      <section role="title" class="recipe-title">
+          <img src="assets/images/image-omelette.jpeg" alt="">
+          <h1>Simple Omelette Recipe</h1>
+          <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+      </section>
+      <section role="preparation" class="prep-time">
+        <h4>Preparation time</h4>
+        <ul>
+          <li>Total: Approximately 10 minutes</li>
+          <li>Preparation: 5 minutes</li>
+          <li>Cooking: 5 minutes</li>
+        </ul>
+      </section>
+      <section role="ingredients" class="ingredients">
+        <h2>Ingredients</h2>
+        <ul>
+          <li>2-3 large eggs</li>
+          <li>Salt, to taste</li>
+          <li>Pepper, to taste</li>
+          <li>1 tablespoon of butter or oil</li>
+          <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+        </ul>
+      </section>
+      <hr>
+      <section role="instructions" class="instructions">
+        <h2>Instructions</h2>
+        <ol>
+          <li><em>Beat the eggs:</em> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
+          <li><em>Heat the pan:</em> Place a non-stick frying pan over medium heat and add butter or oil.</li>
+          <li><em>Cook the omelette:</em> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
+          <li><em>Add fillings (optional):</em> When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
+          <li><em>Fold and serve:</em> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
+          <li><em>Enjoy:</em> Serve hot, with additional salt and pepper if needed.</li>
+        </ol>
+      </section>
+      <hr>
+      <section role="nutrition" class="nutrition">
+        <h2>Nutrition</h2>
+        <p>The table below shows nutritional values per serving without the additional fillings.</p>
+        <table>
+          <tr>
+            <td>Calories</td>
+            <td>277kcal</td>
+          </tr>
+          <tr>
+            <td>Carbs</td>
+            <td>0g</td>
+          </tr>
+          <tr>
+            <td>Protein</td>
+            <td>20g</td>
+          </tr>
+          <tr>
+            <td>Fat</td>
+            <td>22g</td>
+          </tr>
+        </table>
+      </section>
+    </article>
+  </main>
+  </body>
 </html>
